--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
   --background-light-gray-2: rgb(236, 236, 236);
   --background-light-gray-3: rgb(226, 226, 226);
   --background-light-green: rgb(100, 201, 100);
+  --background-light-green-2: rgb(157, 215, 114);
+  --background-light-yellow: rgb(253, 206, 23);
+  --background-light-orange: rgb(253, 132, 70);
   --background-light-red: rgb(253, 86, 95);
   --background-white: #fff;
 }
